@@ -1,6 +1,9 @@
 New in v1.1.17 (????/??/??)
 ---------------------------
 
+Properly handle hardlink comparison when the metadata about a destination
+hardlink has become corrupt. Closes Debian bug #486653. (Andrew Ferguson)
+
 Fix typo in fs_abilities noticed by Martin Krafft. Add EILSEQ ("Invalid or
 incomplete multibyte or wide character") to the list of recoverable errors.
 Thanks to Hanno Stock for catching that. (Andrew Ferguson)
